--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,8 @@
     /* IE and Edge */
     -ms-overflow-style: none;
   }
+
+  .bg-blur {
+    backdrop-filter: blur(5px); /* Adjust the blur radius as needed */
+  }
   
